added search page with sqli vulnerability

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 $color-white:#FFF;
 $color-black:#111;
 $color-charcoal:#222;
+$color-dark-gray:#444;
 $color-gray:#888;
 $color-red:#F00;
 $color-green:#0F0;
