added preprocess secure flag to toggle password algorithm and xss vulnerability

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -154,7 +154,7 @@ section {
 	border:1px solid $color-magenta;
 	box-sizing:border-box;
 	padding:48px;
-	background-color:$color-black;
+	background-color:$color-black-rgba;
 	position:relative;
 	width:calc(100% - 64px);
 	margin:32px;
