--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $color-white:#FFF;
 $color-black:#111;
+$color-black-rgba:rgba(17, 17, 17, 0.73);
 $color-charcoal:#222;
 $color-dark-gray:#444;
 $color-gray:#888;
